sass/css/syntax-theme.css
/*
 * theme "Catppuccin" generated by syntect
 */

.z-code {
  transition: background-color 0.3s ease;
}

html[data-theme="light"] .z-code {
  color: #4c4f69;
  background-color: #f2efea;
}

html[data-theme="light"] .z-comment {
  color: #9ca0b0;
  font-style: italic;
}
html[data-theme="light"] .z-string {
  color: #40a02b;
}
html[data-theme="light"] .z-string.z-regexp {
  color: #fe640b;
}
html[data-theme="light"] .z-constant.z-numeric {
  color: #fe640b;
}
html[data-theme="light"] .z-constant.z-language.z-boolean {
  color: #fe640b;
  font-weight: bold;
  font-style: italic;
}
html[data-theme="light"] .z-constant.z-language {
  color: #7287fd;
  font-style: italic;
}
html[data-theme="light"] .z-support.z-function.z-builtin {
  color: #fe640b;
  font-style: italic;
}
html[data-theme="light"] .z-variable.z-other.z-constant {
  color: #fe640b;
}
html[data-theme="light"] .z-keyword {
  color: #d20f39;
  font-style: italic;
}
html[data-theme="light"] .z-keyword.z-control.z-loop,
html[data-theme="light"] .z-keyword.z-control.z-conditional,
html[data-theme="light"] .z-keyword.z-control.z-c\+\+ {
  color: #8839ef;
  font-weight: bold;
}
html[data-theme="light"] .z-keyword.z-control.z-return,
html[data-theme="light"] .z-keyword.z-control.z-flow.z-return {
  color: #ea76cb;
  font-weight: bold;
}
html[data-theme="light"] .z-support.z-type.z-exception {
  color: #fe640b;
  font-style: italic;
}
html[data-theme="light"] .z-keyword.z-operator,
html[data-theme="light"] .z-punctuation.z-accessor {
  color: #04a5e5;
  font-weight: bold;
}
html[data-theme="light"] .z-punctuation.z-separator {
  color: #179299;
}
html[data-theme="light"] .z-punctuation.z-terminator {
  color: #179299;
}
html[data-theme="light"] .z-punctuation.z-section {
  color: #7c7f93;
}
html[data-theme="light"] .z-keyword.z-control.z-import.z-include {
  color: #179299;
  font-style: italic;
}
html[data-theme="light"] .z-storage {
  color: #d20f39;
}
html[data-theme="light"] .z-storage.z-type {
  color: #df8e1d;
  font-style: italic;
}
html[data-theme="light"] .z-storage.z-modifier {
  color: #d20f39;
}
html[data-theme="light"] .z-entity.z-name.z-namespace,
html[data-theme="light"] .z-meta.z-path {
  color: #dc8a78;
  font-style: italic;
}
html[data-theme="light"] .z-storage.z-type.z-class {
  color: #dc8a78;
  font-style: italic;
}
html[data-theme="light"] .z-entity.z-name.z-label {
  color: #1e66f5;
}
html[data-theme="light"] .z-keyword.z-declaration.z-class {
  color: #d20f39;
  font-style: italic;
}
html[data-theme="light"] .z-entity.z-name.z-class,
html[data-theme="light"] .z-meta.z-toc-list.z-full-identifier {
  color: #04a5e5;
}
html[data-theme="light"] .z-entity.z-other.z-inherited-class {
  color: #04a5e5;
  font-style: italic;
}
html[data-theme="light"] .z-entity.z-name.z-function,
html[data-theme="light"] .z-variable.z-function {
  color: #1e66f5;
  font-style: italic;
}
html[data-theme="light"] .z-entity.z-name.z-function.z-preprocessor {
  color: #d20f39;
}
html[data-theme="light"] .z-keyword.z-control.z-import {
  color: #d20f39;
}
html[data-theme="light"] .z-entity.z-name.z-function.z-constructor,
html[data-theme="light"] .z-entity.z-name.z-function.z-destructor {
  color: #7287fd;
}
html[data-theme="light"] .z-variable.z-parameter.z-function {
  color: #dc8a78;
  font-style: italic;
}
html[data-theme="light"] .z-keyword.z-declaration.z-function {
  color: #e64553;
  font-style: italic;
}
html[data-theme="light"] .z-support.z-function {
  color: #04a5e5;
}
html[data-theme="light"] .z-support.z-constant {
  color: #1e66f5;
}
html[data-theme="light"] .z-support.z-type,
html[data-theme="light"] .z-support.z-class {
  color: #1e66f5;
  font-style: italic;
}
html[data-theme="light"] .z-variable.z-function {
  color: #1e66f5;
  font-style: italic;
}
html[data-theme="light"] .z-variable.z-parameter {
  color: #dc8a78;
  font-style: italic;
}
html[data-theme="light"] .z-variable.z-other {
  color: #4c4f69;
  font-style: italic;
}
html[data-theme="light"] .z-variable.z-other.z-member {
  color: #dc8a78;
}
html[data-theme="light"] .z-variable.z-language {
  color: #179299;
}
html[data-theme="light"] .z-entity.z-name.z-tag {
  color: #fe640b;
}
html[data-theme="light"] .z-entity.z-other.z-attribute-name {
  color: #8839ef;
  font-style: italic;
}
html[data-theme="light"] .z-punctuation.z-definition.z-tag {
  color: #e64553;
}
html[data-theme="light"] .z-markup.z-underline.z-link.z-markdown {
  color: #dc8a78;
  text-decoration: underline;
  font-style: italic;
}
html[data-theme="light"] .z-meta.z-link.z-inline.z-description {
  color: #7287fd;
  font-weight: bold;
}
html[data-theme="light"] .z-comment.z-block.z-markdown,
html[data-theme="light"] .z-meta.z-code-fence,
html[data-theme="light"] .z-markup.z-raw.z-code-fence,
html[data-theme="light"] .z-markup.z-raw.z-inline {
  color: #179299;
  font-style: italic;
}
html[data-theme="light"] .z-punctuation.z-definition.z-heading,
html[data-theme="light"] .z-entity.z-name.z-section {
  color: #1e66f5;
  font-weight: bold;
}
html[data-theme="light"] .z-markup.z-italic {
  color: #e64553;
  font-style: italic;
}
html[data-theme="light"] .z-markup.z-bold {
  color: #e64553;
  font-weight: bold;
}
html[data-theme="light"] .z-constant.z-character.z-escape {
  color: #ea76cb;
}
html[data-theme="light"]
  .z-source.z-shell.z-bash
  .z-meta.z-function.z-shell
  .z-meta.z-compound.z-shell
  .z-meta.z-function-call.z-identifier.z-shell {
  color: #ea76cb;
}
html[data-theme="light"] .z-variable.z-language.z-shell {
  color: #d20f39;
  font-style: italic;
}
html[data-theme="light"]
  .z-source.z-lua
  .z-meta.z-function.z-lua
  .z-meta.z-block.z-lua
  .z-meta.z-mapping.z-value.z-lua
  .z-meta.z-mapping.z-key.z-lua
  .z-string.z-unquoted.z-key.z-lua {
  color: #7287fd;
  font-style: italic;
}
html[data-theme="light"]
  .z-source.z-lua
  .z-meta.z-function.z-lua
  .z-meta.z-block.z-lua
  .z-meta.z-mapping.z-key.z-lua
  .z-string.z-unquoted.z-key.z-lua {
  color: #dd7878;
}
/* ... */

